[package]
name = "clippy"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
chrono = "0.4.42"
clap = { version = "4.5.52", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
rusqlite = "0.37.0"

[[bin]]
name = "clippy"           # this will be lister.exe
path = "src/bin/lister.rs"

[[bin]]
name = "checker"          # invisible background process
path = "src/bin/checker.rs"
